# aoc

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
app/: aoc.nu  get.sh
assets/samples/2022/: d25-snafu-number-line.txt
rust/: Cargo.toml  README.md
rust/src/: coords.rs  dict.rs  dictionary.rs  lib.rs  main.rs  web.rs
rust/src/coords/: arithmetic.rs  points.rs  spaces.rs
rust/src/coords/spaces/: dense.rs  sparse.rs
rust/src/y2015/: d01.rs  d04.rs  d05.rs  d19.rs
rust/src/y2022/: d02.rs  d03.rs  d04.rs  d05.rs  d07.rs  d08.rs
rust/src/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d08.rs  d09.rs  d10.md  d10.rs  d11.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.md  d19.rs  d20.md  d20.rs  d21.rs  d22.rs  d23.md  d23.rs  d24.rs  d25.rs  mod.rs
rust/src/y2024/: d01.rs  d03.rs
src/: app.rs  lib.rs  main.rs  rust.md  web.md  web.rs
src/coords/: arithmetic.rs  points.rs  spaces.md  spaces.rs
src/coords/spaces/: dense.rs  sparse.md  sparse.rs
src/y2015/: mod.rs
src/y2015/d01/: sample.txt
src/y2015/d02/: mod.rs  sample.txt
src/y2015/d03/: mod.rs  sample.txt
src/y2015/d05/: sample.txt
src/y2015/d06/: mod.rs  sample.txt
src/y2015/d19/: mod.rs  sample.txt
src/y2022/d01/: mod.rs  sample.txt
src/y2022/d02/: sample.txt
src/y2022/d03/: sample.txt
src/y2022/d04/: sample.txt
src/y2022/d05/: sample.txt
src/y2022/d06/: mod.rs  sample.txt
src/y2022/d07/: mod.rs  sample.txt
src/y2023/d01/: mod.rs  sample.txt
src/y2023/d03/: mod.rs  (+1 more)
years/2023/d04/rust/: Cargo.toml
years/2023/d04/rust/src/: main.rs
(+108 files in other folders)
