[package]
name = "wyz_aoc"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
anyhow = "1"
cfg-if = "1"
color-eyre = "0.6"
eyre = "0.6"
funty = "2"
im = "15"
linkme = "0.3"
md5 = "0.7"
nom = "7"
num = "0.4"
paste = "1"
radium = "1"
rayon = "1"
tap = "1"
tracing = "0.1"
wyz = "0.6"

[dependencies.bitvec]
version = "1"
features = ["serde"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["chrono", "env-filter", "fmt", "json", "registry"]
