[package]
name = "wyz_aoc_2023_d04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wyz_aoc = { path = "../../../../rust" }
anyhow = "1"
nom = "7"
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]
